# BUAA_Compiler2020

./: .gitignore  BUAA-Compiler2020-Clion-Edition.rar  CMakeLists.txt  CopyPropagation.cpp  GenerateIntermediateCode.cpp  GenerateMIPSAssembly.cpp  Identifier.cpp  README.md  allocateRegisterForGlobalVar.cpp  changeSameName.cpp  compiler.h  function.cpp  functionTable.cpp  identityTable.cpp  lexicalAnalysis.cpp  main.cpp  multiSimplifier.cpp  syntaxAnalysis.cpp  tempVarCounter.cpp  tokenType.cpp
